# zahlungssystem

./: .dockerignore  Dockerfile.client  Dockerfile.grpc_server  Dockerfile.payment_service  Dockerfile.workers  README.md  docker-compose.yml  generate_grpc.sh  nginx.conf  pyproject.toml  requirements.txt
frontend/: app.py
frontend/templates/: index.html
grpc_service/: register_invoice_worker.py  zeebe_config.py
scripts/: create_invoice.py  send_invoice_mail.py
utils/: logging_config.py
workers/: __init__.py  docker-compose.yml  errors.py  execute_payment_worker.py  helpers.py  inform_supplier_rejection_worker.py  job_types.py  mail_listener.py  register_invoice_worker.py  request_info_worker.py  runtime.py
